@@ -30,7 +30,7 @@ Some things, in no specific order, that I'd like to fix:
 </i>
 
 
-0.5.x series:  (0.5.0 will hopefully contain at least _some_ of this)
+0.5.x series:  (0.5.0 will hopefully contain at least <i>some</i> of this)
 
    [ ]  Main execution loop should probably be looked over, so
 	that it is general enough to support lots of variants of
